--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,8 +9,9 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 6px 8px;
+    padding: 4px 6px;
     z-index: 1;
+    width: 500px;
   }
   
   .dropdown:hover .dropdown-content {
