--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,7 +14,7 @@ body {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 4px 6px;
-  z-index: 1;
+  z-index: 2;
   width: 500px;
 }
   
@@ -69,5 +69,14 @@ body {
 }
 
 #chatDisplay {
+  height: 150px;
+	width: 50%;
   margin-left: 75px;
+  overflow: auto;
+  text-align: left;
+  border-radius: 10px;
+  background-color: darkred;
+	font-size: 1em;
+	color: black;
+	padding: 1em 1em 1em 1em;
 }
